<resources>
    <string name="bemo_switch_alert">When this feature is turned on, the power consumption will increase and the power consumption of the mobile phone will increase. Please restart the APP after the switch is turned on or off.</string>
    <string name="bemo_switch">Bemo Switch</string>
    <string name="blood_test">Blood pressure test</string>
    <string name="more_opera">More operations</string>
    <string name="string_msg_basic_requ">Implement the basic requirement of message alerts </string>
    <string name="string_basic_cont1">1.Confirm that GuiderHX is running and connected to the device </string>
    <string name="string_basic_cont2">2.Confirm that GuiderHX has set up the power consumption protection </string>
    <string name="string_basic_cont3">3.Confirm that GuiderHX has set up the auto starting permission </string>
    <string name="string_basic_cont4">4. Confirm that GuiderHX has set up system or mobile manager whitelist protection</string>
    <string name="string_apps_alert_title">Q: Facebook, QQ, wechat and other applications dont have message alerts?</string>
    <string name="string_apps_cont1">1. Confirm that Facebook, QQ, wechat and other applications are allowed to display messages on the notification bar </string>
    <string name="string_apps_cont2">2. Turn off GuiderHX notifications and reopen </string>
    <string name="string_to_restart">To restart</string>
    <string name="string_call_phone_alert">Q:No call alert?</string>
    <string name="string_call_phone_cont1">1. Confirm that contact/address book permissions are turned on </string>
    <string name="string_call_phone_cont2">2. Confirm that phone permission is turned on </string>
    <string name="string_call_phone_cont3">3. Confirm that call record permission is turned on </string>
    <string name="string_smg_alert_title">Q: No reminder for text messages?</string>
    <string name="string_smg_alert_content1">2. Confirm that SMS permission is turned on </string>
    <string name="string_enable">Acquired</string>
    <string name="string_disable">Not acquired</string>
    <string name="string_sos_prmiss">SOS Related Permissions Not Opened</string>
    <string name="string_fatigue_test">Fatigue test</string>
    <string name="string_breathing_test">Breath test</string>
    <string name="string_breath_zishi">Please keep the correct posture</string>
    <string name="string_count_time">Times/minute</string>
    <string name="string_test_come">Test finished</string>
    <string name="string_spo2_long">Blood oxygen concentration</string>
    <string name="string_spo2_nomal">Normal Blood oxygen concentration </string>
    <string name="string_spo2_low">Low Blood oxygen concentration </string>
    <string name="string_spo2_must_low">Low Blood oxygen concentration. Please pay attention. </string>
    <string name="string_spo2_varymust_low"> Warning! Blood oxygen is far below normal!</string>
    <string name="string_today_boday_test">Today’s Medical Examination Report</string>
    <string name="string_today_sleep_test">Today’s Sleep Quality</string>
    <string name="string_today_sleep_Spo_bloop">Today’s Sleep Oximetry</string>
    <string name="string_today_Spo_breath">Blood Oxygen/Apnea Examination</string>
    <string name="fatigue_test">Fatigue Test</string>
    <string name="fatigue_no_test_desc">Pay attention to your physical condition properly</string>
    <string name="fatigue_noral_suggest"> You are energetic, no fatigue, stay focused, and work very efficiently </string>
    <string name="fatigue_mild_suggest">You are slightly tired and uncomfortable. You can usually listen to some of your favorite music to ease it.</string>
    <string name="fatigue_moderate_suggest">You may feel tired, dizzy, stiff, etc. You can look at the distant scenery or take a nap, relieve fatigue and prepare for efficient work.</string>
    <string name="fatigue_sebere_suggest"> You may not be able to concentrate. You are very sleepy. You should pay more attention to rest, drink more water, keep yourself in a good mood, relax your body and mind, and work efficiently </string>
    <string name="test_invalid">Test Invalid</string>
    <string name="fatigue_normal">Normal fatigue</string>
    <string name="fatigue_mild">Mild fatigue</string>
    <string name="fatigue_moderate">Moderate Fatigue</string>
    <string name="fatigue_severe">Severe Fatigue</string>
    <string name="vpspo2h_toptitle_breath"> Respiratory rate </string>
    <string name="spo2_test">Blood Oxygen Test</string>
    <string name="spo2_calibration_pro"> Calibration progress </string>
    <string name="vpspo2h_spo2h"> Blood Oxygen </string>
    <string name="count_down">Countdown</string>
    <string name="string_devices_ui">Style setting of main interfaces</string>
    <string name="string_default_style">Default style</string>
    <string name="style_1">Style 1</string>
    <string name="style_2"> Style 2</string>
    <string name="style_3"> Style 3</string>
    <string name="style_4"> Style 4</string>
    <string name="vpspo2h_state_normal">Normal</string>
    <string name="vpspo2h_state_calm">Quiet</string>
    <string name="vpspo2h_state_error">Unnormal</string>
    <string name="vpspo2h_state_little">Mild</string>
    <string name="vpspo2h_state_mulmulsport">Restlessness</string>
    <string name="vpspo2h_state_mulsport"> Hyperactivity </string>
    <string name="more">More</string>
    <string name="pack_up">Collapse</string>
    <string name="vpspo2h_toptitle_heart">Cardiac Load</string>
    <string name="vpspo2h_toptitle_lowspo2h">Hypoxia time</string>
    <string name="vpspo2h_toptitle_sleep">Sleeping Activity</string>
    <string name="severe">Severe</string>
    <string name="moderate">Moderate</string>
    <string name="analysis_result">Analysis results (for reference only)</string>
    <string name="spo2_main_sorce">Main indicators</string>
    <string name="vpspo2h_sleep_sportvalue">Range of sleeping activity</string>
    <string name="vpspo2h_breath_break">OSAHS</string>
    <string name="vpspo2h_ratevaraive">HRV</string>
    <string name="vpspo2h_low_remain">Hypoxia and arousal</string>
    <string name="ave_value">Average Value</string>
    <string name="heart_health_sorce">Heart health index</string>
    <string name="spo2_breath_break">Blood oxygen/Apnea</string>
    <string name="name">Name</string>
    <string name="frequent_time">Frequently appearing time</string>
    <string name="times">Times</string>
    <string name="reference">Reference Value</string>
    <string name="max_min">Max(Min)</string>
    <string name="intervention_measures">Intervention</string>
    <string name="vpspo2h_state_realtime">Real-time blood oxygen</string>
    <string name="vpspo2h_state_breathbreak">Apnea</string>
    <string name="lero_referenc">Lorentz scatter plot reference</string>
    <string name="hrv_data">HRV data</string>
    <string name="mild_fait">Mild fatigue</string>
    <string name="general_fait">General fatigue</string>
    <string name="weight_fait">Severe fatigue</string>
    <string name="common_sense_of_apnea">Apnea common sense</string>
    <string name="max_value">Max</string>
    <string name="min_value">Min</string>
    <string name="signle_minute">Minute</string>
    <string name="second">Second</string>
    <string name="time_area">Time area</string>
    <string name="accumulate"> Accumulative value </string>
    <string name="des">Open Guider’s auxiliary ball </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="boot_title">System is starting</string>
    <string name="boot_content">Starting application</string>
    <string name="mmeasure">Measuring</string>
    <string name="mmeasure_overtime">Measurement time exceeded\n Please measure again </string>
    <string name="mmeasure_retry">Overtime restest</string>
    <string name="mknown">Known</string>
    <string name="mdismiss">Close</string>
    <string name="mconnect_no">Unconnected</string>
    <string name="mconnect_yes">Connected</string>
    <string name="msensitivity_high">High sensitivity</string>
    <string name="msensitivity_medium">Medium sensitivity</string>
    <string name="msensitivity_low">Low sensitivity</string>
    <string name="mfall_charge">Open this function\n It will accelerate power consumption</string>
    <string name="mfall_alarm">Fall alarm</string>
    <string name="mdevice_pair">Device pairing</string>
    <string name="mdevice_list">Device list</string>
    <string name="mpairing">Pairing...</string>
    <string name="mpair">Paired</string>
    <string name="mnodata">No data</string>
    <string name="mdevice_delete">Delete</string>
    <string name="mlow_battery">Low power</string>
    <string name="mnormal">Normal\n mode</string>
    <string name="mcarer">Care\n mode</string>
    <string name="mtracking">Special\n tracking</string>
    <string name="msync_charge">open this fuction\n It will accelerate power consumption </string>
    <string name="msync">Syncing</string>
    <string name="mmonday">Monday</string>
    <string name="mtuesday">Tuesday</string>
    <string name="mwednesday">Wednesday</string>
    <string name="mthursday">Thursday</string>
    <string name="mfriday">Friday</string>
    <string name="msaturday">Saturday</string>
    <string name="msunday">Sunday</string>
    <string name="mmedicine"> Medication reminder </string>
    <string name="mappointment">Follow-up reminder</string>
    <string name="mstep">Steps</string>
    <string name="mkm">KM</string>
    <string name="mopen">open</string>
    <string name="mclose">close</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="title_contact_settings">Call setting</string>
    <string name="title_dial">Quick dial</string>
    <string name="title_emergency">Emergency call</string>
    <string name="title_faimly">Family call</string>
    <string name="title_location">Location service</string>
    <string name="action_start">Start</string>
    <string name="title_contactlist">Contact list</string>
    <string name="title_favoritelist">White list</string>
    <string name="settings_round_dial_phone">Round dial</string>
    <string name="title_remind">Event reminder</string>
    <string name="title_remind_medicine"> Medication reminder </string>
    <string name="title_remind_back_clinic">Follow-up reminder</string>
    <string name="title_remind_on_off">on/off</string>
    <string name="title_connection">Communication setting</string>
    <string name="string_yesterday">2 DAYS AGO</string>
    <string name="string_writ_new_device_password">Please enter a new password</string>
    <string name="heart_rate_test">heart rate test</string>
    <string name="bangding">Binding</string>
    <string name="input_password">Please enter your password</string>
    <string name="input_code">Please enter the verification code</string>
    <string name="input_name">Please input your mobile phone</string>
    <string name="cancle">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="send_code">Send Verification Code</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="today">TODAY</string>
    <string name="input_old_password">Please enter old password</string>
    <string name="input_confirm_password">Please enter the confirmation password</string>
    <string name="question_detail">Problem details</string>
    <string name="contact_info">Contact information</string>
    <string name="describe_problem">Please describe your problem</string>
    <string name="leave_phone">Please leave your phone or email to contact us</string>
</resources>