<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/comment_b30_title_layout"/>



        <LinearLayout
            android:id="@+id/ling11"
            app:layout_constraintTop_toBottomOf="@+id/commB31TitleLayout"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/roateImgView"
                android:layout_width="15dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_phone_code_more"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/wxBindPhoneCodeTv"
                android:layout_width="@dimen/size_50"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="+86"
                android:textColor="#000"
                android:textSize="16sp" />



            <EditText
                android:layout_width="match_parent"
                android:hint="@string/input_name"
                android:id="@+id/wxBindPhoneCodeEdit"
                android:padding="8dp"
                android:inputType="phone"
                android:maxLines="1"
                android:layout_height="wrap_content" />




        </LinearLayout>



    <LinearLayout
        android:id="@+id/lin22"
        app:layout_constraintTop_toBottomOf="@id/ling11"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/wxBindPhoneVerCodeEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/input_code"
            android:padding="8dp"
            android:inputType="number"
            android:maxLines="1"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/wxBindGetVerCodeBtn"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/send_code"
            android:background="@drawable/login_selector"
            android:layout_height="wrap_content" />




    </LinearLayout>






    <Button
        android:id="@+id/wxBindSubBtn"
        android:layout_width="match_parent"
        android:text="@string/bangding"
        app:layout_constraintTop_toBottomOf="@+id/lin22"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_selector"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>