<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <TextView
        android:id="@+id/inputDialogTitletTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/input_password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputDialogEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:hint="@string/input_password"
        android:inputType="number"
        android:maxLength="4"
        android:padding="5dp"
        android:textSize="@dimen/sp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDialogTitletTv" />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5"
        android:layout_marginBottom="@dimen/size_3"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDialogEdit">


        <Button
            android:id="@+id/inputDialogCancleBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_35"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/cancle" />

        <View
            android:layout_width="@dimen/size_25"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/inputDialogSureBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_35"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/confirm" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>