<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/size_10"
    android:background="@color/b30_sport"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/homeB31ManFatigueImg"
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:layout_gravity="center"
                android:background="@drawable/fgm_home_function_ftg" />

            <TextView
                android:textSize="@dimen/sp_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/string_fatigue_test"
                android:textColor="@color/contents_text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/homeB31ManRespRateImg"
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:layout_gravity="center"
                android:background="@drawable/fgm_home_function_breath" />

            <TextView
                android:textSize="@dimen/sp_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/string_breathing_test"
                android:textColor="@color/contents_text" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/item_blood"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/homeB31ManBloadImg"
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:layout_gravity="center"
                android:background="@drawable/ic_meaure_bload_bottom" />

            <TextView
                android:textSize="@dimen/sp_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/blood_test"
                android:textColor="@color/contents_text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/homeB31ManHeartImg"
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:layout_gravity="center"
                android:background="@drawable/fgm_home_function_heart" />

            <TextView
                android:textSize="@dimen/sp_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/heart_rate_test"
                android:textColor="@color/contents_text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/homeB31ManBloadOxImg"
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:layout_gravity="center"
                android:background="@drawable/fgm_home_function_sp" />

            <TextView
                android:textSize="@dimen/sp_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/spo2_test"
                android:textColor="@color/contents_text" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>