<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:id="@+id/homeSpo2TmpView"
    android:layout_height="wrap_content">


    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/block_spo2h"
        style="@style/style_block"
        android:layout_marginTop="1dp"
        android:background="@drawable/vpspo2h_bg_spo2h">

        <RelativeLayout
            android:id="@+id/block_title_spo2h"
            style="@style/style_block_toptitle">

            <TextView
                android:id="@+id/analysis_chartview_title_spo2h"
                style="@style/style_block_toptitle_tv"
                android:text="@string/string_today_Spo_breath" />

            <ImageView style="@style/style_block_toptitle_img" />

        </RelativeLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/block_chartview_spo2h"
            android:layout_width="match_parent"
            android:layout_height="@dimen/block_chartview_height"
            android:layout_marginLeft="@dimen/block_chartview_maginleft"
            android:layout_marginRight="@dimen/block_chartview_maginleft" />

        <LinearLayout
            android:id="@+id/block_state_spo2h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/block_state_maginleft"
            android:layout_marginRight="@dimen/block_state_maginleft"
            android:background="@color/block_backgroud_spo2h">

            <LinearLayout style="@style/style_block_bottom_state_left">

                <TextView
                    style="@style/style_block_bottom_state_dot"
                    android:textColor="@color/spo2h_dot_spo2h_1" />

                <TextView
                    style="@style/style_block_bottom_state_tv"
                    android:text="@string/vpspo2h_state_realtime" />
            </LinearLayout>

            <LinearLayout style="@style/style_block_bottom_state_right">

                <TextView
                    style="@style/style_block_bottom_state_dot"
                    android:textColor="@color/spo2h_dot_spo2h_2" />

                <TextView
                    style="@style/style_block_bottom_state_tv"
                    android:text="@string/vpspo2h_state_breathbreak"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/block_bottom_tip_spo2h"
            style="@style/style_block_bottom_tip" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>